--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -72,8 +72,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>$(ProjectDir)ThirdParty\DXTex\Lib;$(ProjectDir)ThirdParty\spdlog\Lib;$(ProjectDir)Source;$(ProjectDir)ThirdParty\Assimp;%(AdditionalLibraryDirectories);$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow\ThirdParty\Bullet\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>spdlogd.lib;DirectXTexd.lib;Bullet3Collision_Debug.lib;BulletCollision_Debug.lib;Bullet3Dynamics_Debug.lib;BulletDynamics_Debug.lib;Bullet3Common_Debug.lib;LinearMath_Debug.lib;assimp-vc140-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)ThirdParty\YamlCpp\Lib;$(ProjectDir)ThirdParty\DXTex\Lib;$(ProjectDir)ThirdParty\spdlog\Lib;$(ProjectDir)Source;$(ProjectDir)ThirdParty\Assimp;%(AdditionalLibraryDirectories);$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow\ThirdParty\Bullet\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>yaml-cppd.lib;spdlogd.lib;DirectXTexd.lib;Bullet3Collision_Debug.lib;BulletCollision_Debug.lib;Bullet3Dynamics_Debug.lib;BulletDynamics_Debug.lib;Bullet3Common_Debug.lib;LinearMath_Debug.lib;assimp-vc140-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y "$(OutDir)Flow.dll" "$(SolutionDir)bin\$(Configuration)-$(Platform)\Sandbox\"</Command>
@@ -98,8 +98,8 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(ProjectDir)ThirdParty\spdlog\Lib;$(ProjectDir)ThirdParty\DXTex\Lib;$(ProjectDir)Source;$(ProjectDir)ThirdParty\Assimp;%(AdditionalLibraryDirectories);$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow\ThirdParty\Bullet\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>spdlog.lib;DirectXTex.lib;Bullet3Collision.lib;BulletCollision.lib;Bullet3Dynamics.lib;BulletDynamics.lib;Bullet3Common.lib;LinearMath.lib;assimp-vc140-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)ThirdParty\YamlCpp\Lib;$(ProjectDir)ThirdParty\spdlog\Lib;$(ProjectDir)ThirdParty\DXTex\Lib;$(ProjectDir)Source;$(ProjectDir)ThirdParty\Assimp;%(AdditionalLibraryDirectories);$(SolutionDir)Flow\ThirdParty\OpenCV;$(SolutionDir)Flow\ThirdParty\Bullet\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>yaml-cpp.lib;spdlog.lib;DirectXTex.lib;Bullet3Collision.lib;BulletCollision.lib;Bullet3Dynamics.lib;BulletDynamics.lib;Bullet3Common.lib;LinearMath.lib;assimp-vc140-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y "$(OutDir)Flow.dll" "$(SolutionDir)bin\$(Configuration)-$(Platform)\Sandbox\"</Command>
