Added: - Changed gameobject management to guid based. - Added a helper function to get an array of components from a node tree - Camera position is now saved in the level data - Updated the editor settings window - Editor settings are now saved with the new YAML api - Added mouse panning and scrolling
Fixed:
- Fixed components not being loaded in the correct position
- Fixed components not being loaded as a root component
- Fixed components that are handled by an actor being saved
- Fixed components spawned from the spawn window not being registered

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -396,6 +396,7 @@
     <ClCompile Include="Source\Flow\GameFramework\Actor.cpp" />
     <ClCompile Include="Source\Flow\Maths\Maths.cpp" />
     <ClCompile Include="Source\Flow\Utils\BulletDebugDrawing.cpp" />
+    <ClCompile Include="Source\Flow\Utils\ComponentHelper.cpp" />
     <ClCompile Include="Source\Flow\Utils\DebugDraw.cpp" />
     <ClCompile Include="Source\Flow\Utils\GUIDGenerator.cpp" />
     <ClCompile Include="Source\Flow\Utils\Profiling.cpp" />
