--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1280,721
+Size=2560,1368
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,10 +19,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1071,186
-Size=209,390
+Pos=2072,263
+Size=488,814
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000010,0
 
 [Window][Heirarchy]
 Pos=1026,19
@@ -31,14 +31,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=1071,186
-Size=209,390
+Pos=2072,263
+Size=488,814
 Collapsed=0
-DockId=0x00000001,2
+DockId=0x00000010,2
 
 [Window][Dear ImGui Demo]
 Pos=557,45
-Size=620,624
+Size=1501,947
 Collapsed=0
 
 [Window][Asset System]
@@ -69,14 +69,14 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=1071,186
-Size=209,390
+Pos=2072,263
+Size=488,814
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000010,1
 
 [Window][Editor Settings]
 Pos=320,102
-Size=702,390
+Size=667,404
 Collapsed=0
 
 [Window][Asset Browser]
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=1069,721
+Size=2070,1058
 Collapsed=0
 DockId=0x00000007,0
 
@@ -135,10 +135,10 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=1071,578
-Size=209,162
+Pos=0,1079
+Size=2560,308
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000008,0
 
 [Window][Popout]
 Pos=759,123
@@ -151,30 +151,30 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=10,461
-Size=2092,269
+Pos=10,759
+Size=2560,308
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=1071,19
-Size=209,165
+Pos=2072,19
+Size=488,242
 Collapsed=0
 DockId=0x0000000C,0
 
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=X
-  DockNode          ID=0x00000003 Parent=0xD9E1F891 SizeRef=2139,721 Split=Y Selected=0xB32CD986
-    DockNode        ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
-      DockNode      ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
-      DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
-    DockNode        ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-  DockNode          ID=0x00000004 Parent=0xD9E1F891 SizeRef=419,721 Split=Y Selected=0xE884D536
-    DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
-    DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
-      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
-      DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
-        DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=218,186 Selected=0x9A68760C
-        DockNode    ID=0x00000010 Parent=0x0000000A SizeRef=218,624 Split=Y Selected=0xF02CD328
-          DockNode  ID=0x00000001 Parent=0x00000010 SizeRef=419,742 Selected=0xF02CD328
-          DockNode  ID=0x00000002 Parent=0x00000010 SizeRef=419,308 Selected=0xCB7211A8
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Split=Y
+  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=2560,1058 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2070,721 Split=Y Selected=0xB32CD986
+      DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
+        DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
+        DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
+      DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
+    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=488,721 Split=Y Selected=0xE884D536
+      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
+      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
+        DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
+        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,186 Selected=0x9A68760C
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,624 Selected=0xF02CD328
+  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=2560,308 Selected=0xCB7211A8
 
