- Added ImGuizmo - Added NOMINMAX - Added ImGui Render function to tool interface - Added test version of new gizmo

--- a/Flow/Editor/Settings.yaml
+++ b/Flow/Editor/Settings.yaml
@@ -1,7 +1,7 @@
 Levels:
   StartingLevelName: ""
 Docking:
-  DockFloatingWindows: true
+  DockFloatingWindows: false
   DockPadding: [10, 10]
 Console:
   LogColor: [1, 1, 1, 1]
