--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=2072,263
-Size=488,814
+Pos=1949,263
+Size=611,814
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=2072,263
-Size=488,814
+Pos=1949,263
+Size=611,814
 Collapsed=0
 DockId=0x00000010,2
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=2072,263
-Size=488,814
+Pos=1949,263
+Size=611,814
 Collapsed=0
 DockId=0x00000010,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=2070,1058
+Size=1947,1058
 Collapsed=0
 DockId=0x00000007,0
 
@@ -151,25 +151,26 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=10,759
+Pos=0,1079
 Size=2560,308
 Collapsed=0
+DockId=0x00000008,1
 
 [Window][Scene Hierarchy]
-Pos=2072,19
-Size=488,242
+Pos=1949,19
+Size=611,242
 Collapsed=0
 DockId=0x0000000C,0
 
 [Docking][Data]
 DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=2560,1368 Split=Y
   DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=2560,1058 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2070,721 Split=Y Selected=0xB32CD986
+    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=1947,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
         DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
         DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
       DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=488,721 Split=Y Selected=0xE884D536
+    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=611,721 Split=Y Selected=0xE884D536
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
