--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1037,148
-Size=243,472
+Pos=1037,149
+Size=243,471
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=1037,148
-Size=243,472
+Pos=1037,149
+Size=243,471
 Collapsed=0
 DockId=0x00000010,2
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=1037,148
-Size=243,472
+Pos=1037,149
+Size=243,471
 Collapsed=0
 DockId=0x00000010,1
 
@@ -115,7 +115,7 @@ Collapsed=0
 
 [Window][Actor Spawner]
 Pos=10,84
-Size=200,330
+Size=169,190
 Collapsed=0
 
 [Window][Toolbar]
@@ -158,7 +158,7 @@ DockId=0x00000008,1
 
 [Window][Scene Hierarchy]
 Pos=1037,19
-Size=243,127
+Size=243,128
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -175,7 +175,7 @@ DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,242 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,898 Selected=0xF02CD328
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,128 Selected=0x9A68760C
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,471 Selected=0x3F488DE8
   DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1605,224 Selected=0xCB7211A8
 
