- Added a shader for lit flat color. - Added a material common namespace for common material related things :shrug: - Removed most of the usage of Mat_FlatColour for Mat_LitColor - Reworked materials to use the common properties/tags when preferable

--- a/Flow/Assets/EditorAssetMap.yaml
+++ b/Flow/Assets/EditorAssetMap.yaml
@@ -34,3 +34,5 @@ ReferencedAssets:
   - Bin/Shaders/SolidColor2D_VS.cso
   - Bin/Shaders/SolidColor2D_PS.cso
   - Bin/Shaders/LineColor_PS.cso
+  - Bin/Shaders/LitColor_PS.cso
+  - Bin/Shaders/LitColor_VS.cso
