--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1037,149
-Size=243,471
+Pos=873,149
+Size=407,440
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=1037,149
-Size=243,471
+Pos=873,149
+Size=407,440
 Collapsed=0
 DockId=0x00000010,2
 
@@ -69,13 +69,13 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=1037,149
-Size=243,471
+Pos=873,149
+Size=407,440
 Collapsed=0
 DockId=0x00000010,1
 
 [Window][Editor Settings]
-Pos=320,102
+Pos=627,81
 Size=667,404
 Collapsed=0
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=1035,601
+Size=871,570
 Collapsed=0
 DockId=0x00000007,0
 
@@ -135,8 +135,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=0,622
-Size=1280,118
+Pos=0,591
+Size=1280,149
 Collapsed=0
 DockId=0x00000008,0
 
@@ -151,31 +151,41 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=0,622
-Size=1280,118
+Pos=0,591
+Size=1280,149
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene Hierarchy]
-Pos=1037,19
-Size=243,128
+Pos=873,19
+Size=407,128
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][Prototyping Window]
+Pos=198,84
+Size=553,60
+Collapsed=0
+
+[Window][Icon Manager Debug Window]
+Pos=13,713
+Size=1023,207
+Collapsed=0
+
 [Docking][Data]
 DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
-  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1605,1142 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=1553,721 Split=Y Selected=0xB32CD986
+  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1605,570 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=871,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
         DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
         DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
       DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=365,721 Split=Y Selected=0xE884D536
+    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=407,721 Split=Y Selected=0xE884D536
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
           DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,128 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,471 Selected=0x3F488DE8
-  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1605,224 Selected=0xCB7211A8
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,440 Selected=0xF02CD328
+  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1605,149 Selected=0xCB7211A8
 
