--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1280,721
+Size=1920,1008
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=915,149
-Size=365,379
+Pos=1380,351
+Size=540,380
 Collapsed=0
 DockId=0x00000010,0
 
@@ -31,14 +31,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=915,149
-Size=365,379
+Pos=1380,351
+Size=540,380
 Collapsed=0
 DockId=0x00000010,2
 
 [Window][Dear ImGui Demo]
-Pos=308,21
-Size=1501,802
+Pos=242,52
+Size=1501,807
 Collapsed=0
 
 [Window][Asset System]
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=915,149
-Size=365,379
+Pos=1380,351
+Size=540,380
 Collapsed=0
 DockId=0x00000010,1
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=0,19
-Size=913,509
+Size=1378,712
 Collapsed=0
 DockId=0x00000007,0
 
@@ -114,8 +114,8 @@ Size=350,70
 Collapsed=0
 
 [Window][Actor Spawner]
-Pos=11,216
-Size=169,190
+Pos=8,82
+Size=169,186
 Collapsed=0
 
 [Window][Toolbar]
@@ -135,10 +135,10 @@ Size=520,600
 Collapsed=0
 
 [Window][Output]
-Pos=0,530
-Size=1280,210
+Pos=0,733
+Size=643,294
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000002,0
 
 [Window][Popout]
 Pos=759,123
@@ -151,14 +151,14 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=0,530
-Size=1280,210
+Pos=645,733
+Size=1275,294
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x0000000F,0
 
 [Window][Scene Hierarchy]
-Pos=915,19
-Size=365,128
+Pos=1380,19
+Size=540,330
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -172,20 +172,28 @@ Pos=426,537
 Size=1023,192
 Collapsed=0
 
+[Window][World Viewer]
+Pos=1380,351
+Size=540,380
+Collapsed=0
+DockId=0x00000010,3
+
 [Docking][Data]
-DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,1008 Split=Y
   DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=1280,509 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=913,721 Split=Y Selected=0xB32CD986
+    DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=918,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
         DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 CentralNode=1 Selected=0xB32CD986
         DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
       DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=365,721 Split=Y Selected=0xE884D536
+    DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=360,721 Split=Y Selected=0xE884D536
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
         DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Split=Y Selected=0xDC408BFB
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,128 Selected=0x9A68760C
-          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,379 Selected=0xF02CD328
-  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,210 Selected=0xCB7211A8
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=218,236 Selected=0x9A68760C
+          DockNode  ID=0x00000010 Parent=0x0000000A SizeRef=218,271 Selected=0xF02CD328
+  DockNode          ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,210 Split=X Selected=0xCB7211A8
+    DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=643,210 Selected=0xCB7211A8
+    DockNode        ID=0x0000000F Parent=0x00000008 SizeRef=1275,210 Selected=0x04985A5E
 
